--- a/src/app/features/home/sections/projects-preview/projects-preview-section.component.scss
+++ b/src/app/features/home/sections/projects-preview/projects-preview-section.component.scss
@@ -11,7 +11,7 @@
   &__grid {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
     gap: var(--space-6);
     margin-bottom: var(--space-8);
   }
